# trine-kv

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
.phrase/: current.md  decision.md  evidence.md  roadmap.md
.phrase/adr/: 0001-v1-lsm-mvcc-engine.md  0002-native-platform-io-backend-matrix.md
.phrase/protocol/: async-first-portable-storage-and-wasm.md  delete-gc-lifecycle.md  guard-aware-lsm-strategy.md  layered-filter-allocation.md  lock-free-foreground-write-path.md  lsm-core-boundary-spec.md  performance-research-design.md  read-version-public-api.md  snapshot-version-pinning.md  titan-like-blob-storage-spec.md  trine-kv-v1-spec.md
benches/: v1_bench.rs
docs/: branching.md  durability.md  object-storage-backend.md  platform-io.md  release.md  storage-substrate-seam.md  usage.md
docs/benchmarks/: 0.1-baseline.md  0.4-release-check.md  v1-background-maintenance-budget-tuning.md  v1-background-maintenance-contention.md  v1-baseline.md  v1-batched-point-reads.md  v1-benchmark-baseline-refresh.md  v1-blob-level-merge-lazy-gc.md  v1-block-cache-decode.md  v1-cold-manifest-open-reopen.md  v1-cold-table-open-read.md  v1-delta-read-chain-budget.md  v1-delta-read-cost.md  v1-get-many-internal-batching.md  v1-large-value-direct-read.md  v1-lz4-decode-allocation.md  v1-maintenance-write-amplification.md  v1-metadata-index-shared-payload.md  v1-prefix-scan-cursor.md  v1-read-only-cold-open-breakdown.md  v1-read-only-cold-reopen.md  v1-read-pruning-measurement.md  v1-serialization-decode-copy.md  v1-startup-recovery-boundary.md  v1-storage-read-buffer-shared-bytes.md  v1-write-path-persist.md  wal-replay-writer-lease.md
examples/: async_quickstart.rs  durability.rs  event_index.rs  platform_io.rs  quickstart.rs  read_versions.rs  sync_quickstart.rs  user_store.rs
src/: blob.rs  block.rs  branch.rs  bucket.rs  cache.rs  checksum.rs  codec.rs  compaction.rs  db.rs  durability.rs  error.rs  filter.rs  internal_key.rs  io.rs  iterator.rs  keyspace.rs  lib.rs  limits.rs  manifest.rs  memtable.rs  mvcc.rs  object_store.rs  options.rs  point_value.rs  prefix.rs  range_tombstone.rs  recovery.rs  runtime.rs  s3.rs  search.rs  snapshot.rs  stats.rs  storage.rs  substrate.rs  table.rs  transaction.rs  types.rs  version.rs  wal.rs  write_batch.rs
src/db/: commit.rs
src/io/: platform_backend.rs  platform_threadpool.rs
src/io/platform_backend/: apple_dispatch.rs  freebsd_backend.rs  linux_backend.rs  macos_backend.rs  solarish_backend.rs  unix_backend.rs  unsupported_backend.rs  windows_backend.rs
src/lsm/: compact.rs  conflict.rs  delta.rs  flush.rs  mod.rs  read.rs  scan.rs  tree.rs  version.rs  write.rs
tests/: async_api.rs  in_memory_iteration.rs  in_memory_mvcc.rs  in_memory_range_delete.rs  in_memory_transaction.rs  model_reference.rs  persistent_wal.rs  scaffold.rs
tests/internal/: persistent_wal.rs
