[package]
name = "trine-kv"
version = "0.2.1"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Embedded LSM MVCC key-value database."
readme = "README.md"
repository = "https://github.com/azothlabs/trine-kv"
documentation = "https://docs.rs/trine-kv"
keywords = ["database", "embedded", "kv", "lsm", "mvcc"]
categories = ["database-implementations"]
include = [
    "/benches",
    "/docs",
    "/examples",
    "/src",
    "/tests",
    "/CHANGELOG.md",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/README.md",
    "/Cargo.lock",
    "/Cargo.toml",
]

[lib]
name = "trine_kv"
path = "src/lib.rs"

[dependencies]
compio = { version = "0.14.0", default-features = false, features = ["runtime"], optional = true }
compio-driver = { version = "0.7.1", default-features = false, features = ["io-uring"], optional = true }
compio-fs = { version = "0.7.0", default-features = false, features = ["io-uring"], optional = true }
compio-runtime = { version = "0.7.0", default-features = false, features = ["io-uring"], optional = true }
# Async primitives (e.g. `futures::lock::Mutex` for serializing object-store
# manifest publishes Send-safely). Available on every target.
futures = "0.3.32"
lz4_flex = "0.13.1"
# Real object-storage backend (S3 and compatible) behind the `s3` feature. The
# `aws` feature provides the S3 client builder; the core gives the in-memory
# store used to test the ObjectClient adapter without a network.
object_store = { version = "0.12", default-features = false, features = ["aws"], optional = true }

[[bench]]
name = "v1_bench"
harness = false

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"

[features]
platform-io = ["dep:compio", "dep:compio-driver", "dep:compio-fs", "dep:compio-runtime"]
# Real object-storage `ObjectClient` (S3 and compatible) via the `object_store` crate.
s3 = ["dep:object_store"]

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
js-sys = "0.3.99"
opfs = "0.2.0"
wasm-bindgen = "0.2.122"
wasm-bindgen-futures = "0.4.72"
