[package]
name = "trine-kv"
version = "0.5.5"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Embedded LSM MVCC key-value database."
readme = "README.md"
repository = "https://github.com/azothlabs/trine-kv"
documentation = "https://docs.rs/trine-kv"
keywords = ["database", "embedded", "kv", "lsm", "mvcc"]
categories = ["database-implementations"]
include = [
    "/benches",
    "/docs",
    "/examples",
    "/src",
    "/tests",
    "/CHANGELOG.md",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/README.md",
    "/Cargo.lock",
    "/Cargo.toml",
]

[lib]
name = "trine_kv"
path = "src/lib.rs"

[dependencies]
bytes = "1.11.1"
crossbeam-channel = { version = "0.5.15", optional = true }
# Async primitives (e.g. `futures::lock::Mutex` for serializing object-store
# manifest publishes Send-safely). Available on every target.
futures = "0.3.32"
# Trine uses only lz4_flex block compression. Keep checked decode enabled, but
# avoid the default `safe-decode` zero-fill path on the table block read path.
lz4_flex = { version = "0.13.1", default-features = false, features = [
    "std",
    "safe-encode",
    "checked-decode",
] }
# Real object-storage backend (S3 and compatible) behind the `s3` feature. The
# `aws` feature provides the S3 client builder; the core gives the in-memory
# store used to test the ObjectClient adapter without a network.
object_store = { version = "0.12", default-features = false, features = ["aws"], optional = true }
# Runtime for real S3-compatible object storage. The `object_store` S3 client is
# reqwest/tokio-based, so its futures need a Tokio reactor in production too.
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time"], optional = true }

[[bench]]
name = "v1_bench"
harness = false

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"

[features]
platform-io = ["dep:crossbeam-channel"]
platform-io-threadpool = ["platform-io"]
platform-io-native = [
    "platform-io",
    "dep:compio",
    "dep:compio-driver",
    "dep:compio-fs",
    "dep:compio-runtime",
    "dep:block2",
    "dep:dispatch2",
]
# Real object-storage `ObjectClient` (S3 and compatible) via the `object_store` crate.
s3 = ["dep:object_store", "dep:tokio"]

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
js-sys = "0.3.99"
opfs = "0.2.0"
wasm-bindgen = "0.2.122"
wasm-bindgen-futures = "0.4.72"

[target.'cfg(any(unix, windows))'.dependencies]
# Cross-platform advisory file locks for native writer leases. The lock is bound
# to the open LOCK file handle so crash recovery is handled by the OS.
fs4 = { version = "0.13.1", default-features = false, features = ["sync"] }
compio = { version = "0.14.0", default-features = false, features = ["runtime"], optional = true }
compio-driver = { version = "0.7.1", default-features = false, features = ["io-uring"], optional = true }
compio-fs = { version = "0.7.0", default-features = false, features = ["io-uring"], optional = true }
compio-runtime = { version = "0.7.0", default-features = false, features = ["io-uring"], optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
block2 = { version = "0.6.2", optional = true }
dispatch2 = { version = "0.3.1", optional = true }
# Non-optional on macOS: the durability abstraction needs F_FULLFSYNC/fsync via
# libc even in the default (std) backend, not just under platform-io-native.
libc = { version = "0.2.186" }
